# agent

./: CLAUDE.md  Makefile  README.md  pyproject.toml
agents/common/: __init__.py  api_factory.py  llm_client.py  logging.py  tracing.py
agents/correction_agent/: api.py  graph.py
agents/data_agent/: api.py  graph.py
agents/infra_agent/: api.py  graph.py
assets/Project_Introduction/: Project introduction.md
docs/: AGENTS.md  ARCHITECTURE.md  MLFLOW_WORKFLOW.md  PORTS.md  SETUP.md
infra/: docker-compose.dev.yml  docker-compose.yml
infra/agent/: Dockerfile
infra/airflow/: Dockerfile  requirements.txt
infra/airflow/dags/: inference_pipeline.py  train_pipeline.py
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/mlflow/: Dockerfile
infra/postgres/init/: 01-create-databases.sh  01-create-databases.sql
infra/prometheus/: prometheus.yml
ml/: Todo.md
ml/inference/: predict.py
ml/serve/: README.md
ml/train/: train.py
tests/: conftest.py
tests/integration/: test_llm_connectivity.py
