[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dais-agent"
version = "0.1.0"
description = "Independent LangChain/LangGraph agents on a minimal MLOps stack."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # LangChain / LangGraph / LangSmith
    "langchain>=0.3.0,<0.4",
    "langchain-core>=0.3.0,<0.4",
    "langchain-openai>=0.2.0,<0.3",
    "langgraph>=0.2.0,<0.3",
    "langsmith>=0.1.140",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",

    # 외부 호출 / 환경변수 / 재시도
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

# ──────────────────────────────
# Build (hatch)
# ──────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["agents"]

# ──────────────────────────────
# Pytest
# ──────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: 외부 시스템(8번 서버 LLM 등)에 의존하는 통합 테스트",
]
addopts = "-ra"

# ──────────────────────────────
# Ruff
# ──────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E501"]

# ──────────────────────────────
# Mypy
# ──────────────────────────────
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
strict_optional = true
